--- a/css/main.css
+++ b/css/main.css
@@ -148,8 +148,8 @@ textarea {
     .grid-full:nth-child(n),
     .grid-25:nth-child(n),
     .grid-unit:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .grid-1:nth-of-type(1n),
     .grid-2:nth-of-type(1n),
     .grid-3:nth-of-type(1n),
@@ -175,11 +175,11 @@ textarea {
 
   .gallery .grid-unit,
   .grid-half {
-    width: 49.24242%; }
+    width: 49.2424242424%; }
     .gallery .grid-unit:nth-child(n),
     .grid-half:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .gallery .grid-unit:nth-of-type(2n),
     .grid-half:nth-of-type(2n) {
       margin-right: 0; }
@@ -189,34 +189,22 @@ textarea {
 
   .grid-flow-opposite {
     float: right; } }
-
-@media screen and (max-width: 783px){
-  .grid-2 {
-    width: 49.24242%; }
-    .grid-2:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
-    .grid-2:nth-of-type(2n) {
-      margin-right: 0; }
-    .grid-2:last-child {
-      margin-right: 0; }
-}
 @media screen and (min-width: 640px) {
   .grid-1 {
-    width: 15.40404%; }
+    width: 15.404040404%; }
     .grid-1:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .grid-1:nth-of-type(6n) {
       margin-right: 0; }
     .grid-1:last-child {
       margin-right: 0; }
 
   .grid-2 {
-    width: 32.32323%; }
+    width: 32.3232323232%; }
     .grid-2:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .grid-2:nth-of-type(3n) {
       margin-right: 0; }
     .grid-2:last-child {
@@ -224,11 +212,11 @@ textarea {
 
   .grid-3,
   .grid-half {
-    width: 49.24242%; }
+    width: 49.2424242424%; }
     .grid-3:nth-child(n),
     .grid-half:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .grid-3:nth-of-type(2n),
     .grid-half:nth-of-type(2n) {
       margin-right: 0; }
@@ -237,21 +225,21 @@ textarea {
       margin-right: 0; }
 
   .grid-4 {
-    width: 66.16162%; }
+    width: 66.1616152593%; }
     .grid-4:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
-    .grid-4:nth-of-type(1.5n) {
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
+    .grid-4:nth-of-type(1.50000002n) {
       margin-right: 0; }
     .grid-4:last-child {
       margin-right: 0; }
 
   .grid-5 {
-    width: 82.74242%; }
+    width: 82.7424240402%; }
     .grid-5:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
-    .grid-5:nth-of-type(1.20482n) {
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
+    .grid-5:nth-of-type(1.20481928n) {
       margin-right: 0; }
     .grid-5:last-child {
       margin-right: 0; }
@@ -261,8 +249,8 @@ textarea {
     width: 100%; }
     .grid-6:nth-child(n),
     .grid-full:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .grid-6:nth-of-type(1n),
     .grid-full:nth-of-type(1n) {
       margin-right: 0; }
@@ -272,7 +260,7 @@ textarea {
 
   /* If there are no margins */
   .grid-1.no-margin {
-    width: 16.66667%; }
+    width: 16.6666666667%; }
     .grid-1.no-margin:nth-child(n) {
       margin-bottom: 0;
       margin-right: 0; }
@@ -282,7 +270,7 @@ textarea {
       margin-right: 0; }
 
   .grid-2.no-margin {
-    width: 33.33333%; }
+    width: 33.3333333333%; }
     .grid-2.no-margin:nth-child(n) {
       margin-bottom: 0;
       margin-right: 0; }
@@ -306,21 +294,21 @@ textarea {
       margin-right: 0; }
 
   .grid-4.no-margin {
-    width: 66.66667%; }
+    width: 66.6666657778%; }
     .grid-4.no-margin:nth-child(n) {
       margin-bottom: 0;
       margin-right: 0; }
-    .grid-4.no-margin:nth-of-type(1.5n) {
+    .grid-4.no-margin:nth-of-type(1.50000002n) {
       margin-right: 0; }
     .grid-4.no-margin:last-child {
       margin-right: 0; }
 
   .grid-5.no-margin {
-    width: 83.0%; }
+    width: 82.9999998008%; }
     .grid-5.no-margin:nth-child(n) {
       margin-bottom: 0;
       margin-right: 0; }
-    .grid-5.no-margin:nth-of-type(1.20482n) {
+    .grid-5.no-margin:nth-of-type(1.20481928n) {
       margin-right: 0; }
     .grid-5.no-margin:last-child {
       margin-right: 0; }
@@ -340,10 +328,10 @@ textarea {
       margin-right: 0; }
 
   .grid-25 {
-    width: 23.86364%; }
+    width: 23.8636363636%; }
     .grid-25:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .grid-25:nth-of-type(4n) {
       margin-right: 0; }
     .grid-25:last-child {
@@ -360,10 +348,10 @@ textarea {
       margin-right: 0; }
 
   .gallery .grid-unit {
-    width: 32.32323%; }
+    width: 32.3232323232%; }
     .gallery .grid-unit:nth-child(n) {
-      margin-bottom: 1.51515%;
-      margin-right: 1.51515%; }
+      margin-bottom: 1.5151515152%;
+      margin-right: 1.5151515152%; }
     .gallery .grid-unit:nth-of-type(3n) {
       margin-right: 0; }
     .gallery .grid-unit:last-child {
@@ -378,12 +366,217 @@ textarea {
 /*!////////////////////////////////////////////////
 // THEME
 /////////////////////////////////////////////////*/
+body {
+  background-color: #efefef; }
+
+/*!////////////////////////////////////////////////
+// COLOR
+/////////////////////////////////////////////////*/
+/*!////////////////////////////////////////////////
+// TYPOGRAPHY
+/////////////////////////////////////////////////*/
+/*! normal = 400, bold = 900 */
+.font-attr, h1, h2, h3, p, a, .button__cta, .tagline i, .tagline b {
+  font-family: "Lato", sans-serif; }
+
+h1 {
+  font-size: 3.4375em; }
+
+h2 {
+  font-size: 2em; }
+
+h3 {
+  font-size: 1.375em; }
+
+p {
+  font-size: 1em;
+  margin-bottom: 20px; }
+
+/*!////////////////////////////////////////////////
+// LINKS
+/////////////////////////////////////////////////*/
+.button__cta {
+  background-color: #ff9900;
+  font-size: 1.75em;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 0 10px 20px; }
+  .button__cta span {
+    padding: 10px 20px;
+    background-color: #d68000;
+    margin-left: 20px; }
+
+/*!////////////////////////////////////////////////
+// NAVIGATION
+/////////////////////////////////////////////////*/
+/*!////////////////////////////////////////////////
+// IMAGES
+/////////////////////////////////////////////////*/
+/*!////////////////////////////////////////////////
+// FORMS
+/////////////////////////////////////////////////*/
+/*!////////////////////////////////////////////////
+// OTHER ELEMENTS
+/////////////////////////////////////////////////*/
+hr {
+  width: 100%;
+  max-width: 215px;
+  border-bottom: 8px solid #efefef;
+  border-top: none; }
+
 /*!////////////////////////////////////////////////
 // MODULES
 /////////////////////////////////////////////////*/
-.test {
-  min-height: 100px;
-  background-color: gray; }
+header[role=banner] {
+  background-color: #fff;
+  width: 90%;
+  margin: 30px auto 0; }
+
+.header__top {
+  padding: 40px 0 40px 20px; }
+
+.header__top--contact {
+  float: right; }
+
+nav[role=navigation] {
+  position: relative;
+  width: 100%;
+  background-color: #192d70;
+  text-align: center; }
+  nav[role=navigation] a {
+    position: relative;
+    z-index: 5;
+    display: inline-block;
+    border-bottom: 5px solid #fff;
+    font-size: 1.25em;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 25px 15px; }
+  nav[role=navigation] a:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 1px;
+    height: 30px;
+    margin-top: -15px;
+    background-color: rgba(255, 255, 255, 0.25); }
+  nav[role=navigation] a:last-child:after {
+    content: "";
+    display: none; }
+  nav[role=navigation] .selected {
+    background-color: #101d49;
+    border-bottom: 5px solid #0079c2;
+    color: #0079c2; }
+
+nav[role=navigation]:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: #fff; }
+
+*[class^="content__"] {
+  background-color: #fff;
+  width: 90%;
+  margin: 0 auto 30px;
+  padding: 30px; }
+
+.content__hero {
+  padding: 0;
+  position: relative; }
+  .content__hero img {
+    width: 100%; }
+  .content__hero li {
+    list-style: none; }
+
+.tagline {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  margin-top: 10%;
+  text-align: center; }
+  .tagline i, .tagline b {
+    display: block;
+    line-height: 1;
+    color: #fff;
+    -webkit-text-shadow: 2px 0 25px black;
+    -moz-text-shadow: 2px 0 25px black;
+    -o-text-shadow: 2px 0 25px black;
+    text-shadow: 2px 0 25px black; }
+  .tagline i {
+    font-size: 3.125em;
+    font-style: normal; }
+  .tagline b {
+    font-size: 7.1875em;
+    font-style: italic; }
+
+.our-services {
+  background-color: #0079c2;
+  padding: 30px;
+  position: absolute;
+  left: 0;
+  bottom: 0; }
+  .our-services li {
+    position: relative; }
+    .our-services li a {
+      display: block;
+      font-size: 2em;
+      font-weight: bold;
+      line-height: 1.1em;
+      color: #fff;
+      text-decoration: none;
+      margin: 50px 0; }
+    .our-services li a:first-child {
+      margin: 10px 0 50px !important; }
+    .our-services li a:last-child {
+      margin: 50px 0 0; }
+  .our-services li:after {
+    content: "";
+    position: absolute;
+    bottom: -28px;
+    width: 100%;
+    height: 8px;
+    background-color: #1a87c8; }
+  .our-services li:last-child:after {
+    content: "";
+    display: none; }
+
+.intro {
+  padding: 50px; }
+  .intro b {
+    background-color: #0079c2;
+    font-size: 1.375em;
+    color: #fff;
+    padding: 8px 10px; }
+  .intro p {
+    font-size: 1.25em; }
+  .intro p:first-of-type {
+    font-size: 1.625em; }
+
+.content__featured {
+  padding: 30px 0; }
+  .content__featured header {
+    padding: 0 30px 30px; }
+
+.featured__project {
+  position: relative; }
+  .featured__project figure img {
+    width: 100%; }
+  .featured__project figcaption {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(25, 45, 112, 0.95);
+    padding: 20px;
+    border-bottom: 10px solid #101d49; }
+    .featured__project figcaption h3 {
+      font-size: 1.375em;
+      color: #fff; }
 
 /*!////////////////////////////////////////////////
 // STATES
