--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,9 +6,182 @@
 /*!////////////////////////////////////////////////
 // MODULES
 /////////////////////////////////////////////////*/
-.test{
-	min-height: 100px;
-	background-color: gray;
+header[role=banner]{
+	background-color: #fff;
+	width: 90%;
+	margin: 30px auto 0;
+	
+}
+.header__top{
+	padding: 40px 0 40px 20px;
+}
+.header__top--contact{
+	float: right;
+}
+nav[role=navigation]{
+	position: relative;
+	width: 100%;
+	background-color: $secondaryColor;
+	text-align: center;
+	a{
+		position: relative;
+		z-index: 5;
+		display: inline-block;
+		border-bottom: 5px solid #fff;
+		font-size: em(20px, $font-size);
+		font-weight: bold;
+		color: #fff;
+		text-transform: uppercase;
+		text-decoration: none;
+		padding: 25px 15px;
+	}
+	a:after{
+		content: "";
+		position: absolute;
+		right: 0;
+		top: 50%;
+		width: 1px;
+		height: 30px;
+		margin-top: -15px;
+		background-color: transparentize(#fff, 0.75);
+	}
+	a:last-child:after{
+		content: "";
+		display: none;
+	}
+	.selected{
+		background-color: $color1;
+		border-bottom: 5px solid $primaryColor ;
+		color: $primaryColor ;
+	}
+}
+
+nav[role=navigation]:after{
+	content: "";
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 5px;
+	background-color: #fff;
+}
+*[class^="content__"]{
+	background-color: #fff;
+	width: 90%;
+	margin: 0 auto 30px;
+	padding: 30px;
+}
+.content__hero{
+	padding: 0;
+	position: relative;
+	img{
+		width: 100%;
+	}
+	li{
+		list-style: none;
+	}
+}
+.tagline{
+	width: 100%;
+	position: absolute;
+	top: 0;
+	margin-top: 10%;
+	text-align: center;
+	i,b{
+		display: block;
+		@extend .font-attr;
+		line-height: 1;
+		color: #fff;
+		@include prefix(text-shadow, 2px 0 25px rgba(0,0,0,1));
+	}
+	i{
+		font-size: em(50px, $font-size);
+		font-style: normal;
+	}
+	b{
+		font-size: em(115px, $font-size);
+		font-style: italic;
+	}
+}
+.our-services{
+	background-color: $primaryColor;
+	padding: 30px;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	li{
+		position: relative;
+		a{
+			display: block;
+			font-size: em(32px, $font-size);
+			font-weight: bold;
+			line-height: 1.1em;
+			color: #fff;
+			text-decoration: none;
+			margin: 50px 0;
+		}
+		a:first-child{
+			margin: 10px 0 50px !important;
+		}
+		a:last-child{
+			margin: 50px 0 0; 
+		}
+	}
+	li:after{
+		content: "";
+		position: absolute;
+		bottom: -28px;
+		width: 100%;
+		height: 8px;
+		background-color: #1a87c8;
+	}
+	li:last-child:after{
+		content: "";
+		display: none;
+	}
+}
+.intro{
+	padding: 50px;
+	b{
+		background-color: $primaryColor;
+		font-size: em(22px, $font-size);
+		color: #fff;
+		padding: 8px 10px;
+	}
+	p{
+		font-size: em(20px, $font-size);
+	}
+	p:first-of-type{
+		font-size: em(26px, $font-size);
+	}
+}
+
+
+.content__featured{
+	padding: 30px 0;
+	header{
+		padding: 0 30px 30px;
+	}
+}
+.featured__project{
+	position: relative;
+	figure{
+		img{
+			width: 100%;
+		}
+	}
+	figcaption{
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		background-color: transparentize($secondaryColor,0.05);
+		padding: 20px;
+		border-bottom: 10px solid $color1;
+		h3{
+			font-size: em(22px, $font-size);
+			color: #fff;
+		}
+	}
 }
 
 
