--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,10 @@ nav[role=navigation]{
 		text-transform: uppercase;
 		text-decoration: none;
 		padding: 25px 15px;
+		&:hover,
+		&:focus{
+			
+		}
 	}
 	a:after{
 		content: "";
