--- a/sass/main.scss
+++ b/sass/main.scss
@@ -142,6 +142,7 @@ nav[role=navigation]:after{
 .tagline{
 	width: 100%;
 	position: absolute;
+	z-index: 2;
 	top: 0;
 	margin-top: 10%;
 	text-align: center;
@@ -165,6 +166,7 @@ nav[role=navigation]:after{
 	background-color: $primaryColor;
 	padding: 30px;
 	position: absolute;
+	z-index: 2;
 	left: 0;
 	bottom: 0;
 	li{
